# webrtc

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WebRTCManager.cpp  WebRTCManager.h  main.cpp  mainwindow.ui
server/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.h  main.cpp
